--- a/WEB_GIS/FRONTEND/TASARIM.html
+++ b/WEB_GIS/FRONTEND/TASARIM.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Hoşgeldiniz.</title>
-<body>
-    <h1>selammmm</h1>
-</body>
-</head>
-</html>
+    <html>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width,initial-scale = 1.0">
+            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
+            <title>Leaflet WEBGIS</title>
+            <style>
+                #map {
+                    width: 100%;
+                    height: 1000px;
+                }
+            </style>
+        </head>
+            <body>
+                <div id="map"></div>
+            </body>
+    </html>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script>
+        var map = L.map('map').setView([38.9573, 35.2407], 7);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+            attribution:'&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+        }).addTo(map);
+        L.CRS.EPSG4326
+    </script>
