--- a/HTML-CSS-JS/cbs_map.html
+++ b/HTML-CSS-JS/cbs_map.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/layout.css">
-    <title>ANASAYFA</title>
+    <title>CBS-ARAYÜZÜ</title>
   </head>
   <body style="background-image: url(static/gis_world.jpg);background-repeat: no-repeat;
   background-size: 100%; color: aliceblue;">
@@ -22,27 +22,15 @@
       </div>
       <div id="nav"> 
         <ul style="list-style-type: none;">
-          <a href="index.html">
-          <li id="homepage" >ANASAYFA </li>
-        </a>
+        <a href="index.html">
+          <li id="homepage" >ANASAYFA </li></a>
         <a href="cbs_map.html">
           <li id="gis_view">CBS ARAYÜZÜ</li></a>
           <li id="about_us">HAKKIMIZDA</li>
           <li id="contact">İLETİŞİM</li>
         </ul>
       </div>
-
-      <div id="container">
-        <div id="updates_and_news">
-          <ol id="news">
-            <li>Web Tasarımına Başlanıldı.</li>
-            <li>asdasdasd</li>
-            <li>asdasdasd</li>
-          </ol>
-        </div>
-        <div id="images"></div>
-      </div>
-
+      <div id="map_view">gis map</div>
       <div id="footer"> 
         <p id="altyazi">Bu website, Bilal Benzer tarafından oluşturulmuştur.</p>
       </div>
