web gis tasarım

--- a/HTML-CSS-JS/cbs_map.html
+++ b/HTML-CSS-JS/cbs_map.html
@@ -2,37 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="static/icon.png"  />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/layout.css">
     <title>CBS-ARAYÜZÜ</title>
   </head>
   <body style="background-image: url(static/gis_world.jpg);background-repeat: no-repeat;
   background-size: 100%; color: aliceblue;">
-      <div id="header"> 
-        <div id="main_title">
-          <div class="background">
-          </div>
-          <h1 id="main_head" >COĞRAFİ BİLGİ SİSTEMLERİ WEB UYGULAMASI</h1>
+  <div id="ust_sekme">
+    <a href="index.html">
+    <img id="backbutton" src="static/back.png" alt="geri"></a>
+  </div>
+      <div id="map_view">gis map
+        <div id="map_ust_sekme">
+          <button  type="menu" id="nokta">Nokta</button>
         </div>
-        <div class="logo2">
-          <img class="logo3" 
-          src="static/logo.png" alt="logo">
-        </div>
-      </div>
-      <div id="nav"> 
-        <ul style="list-style-type: none;">
-        <a href="index.html">
-          <li id="homepage" >ANASAYFA </li></a>
-        <a href="cbs_map.html">
-          <li id="gis_view">CBS ARAYÜZÜ</li></a>
-          <li id="about_us">HAKKIMIZDA</li>
-          <li id="contact">İLETİŞİM</li>
-        </ul>
-      </div>
-      <div id="map_view">gis map</div>
-      <div id="footer"> 
-        <p id="altyazi">Bu website, Bilal Benzer tarafından oluşturulmuştur.</p>
       </div>
   </body>
 </html>
