--- a/HTML-CSS-JS/index.html
+++ b/HTML-CSS-JS/index.html
@@ -26,7 +26,7 @@
           <li id="homepage" >ANASAYFA </li>
         </a>
         <a href="cbs_map.html">
-          <li id="gis_view">CBS ARAYÜZÜ</li></a>
+          <li id="gis_view">HARİTA</li></a>
           <li id="about_us">HAKKIMIZDA</li>
           <li id="contact">İLETİŞİM</li>
         </ul>
