web tasarım geliştirmeler

--- a/HTML-CSS-JS/about_us.html
+++ b/HTML-CSS-JS/about_us.html
@@ -8,5 +8,24 @@
     <title>CBS-ARAYÜZÜ</title>
   </head>
   <body>
-      <div id="ustsekme"></div>
+    <details><summary>Items</summary>
+      <div onclick="">Item 1</div>
+      <div onclick="">Item 2</div>
+      <div onclick="">Item 3</div>
+      <div onclick="">Item 4</div>
+      </details>
+    <details ><summary>Nokta Oluştur</summary><div onclick="">
+      <button></button>
+      <button></button></details>
+    </div>
+    <details><summary>Obje Oluştur</summary>
+    <button type="menu" id="nokta">Nokta</button>
+  <button>Çizgi</button>
+<button>Çokgen</button></details>
+    <button  type="menu" id="nokta">Nokta</button>
+          <button  type="menu" id="cizgi">Çizgi</button>
+          <button  type="menu" id="cokgen">Çokgen</button>
+          <button  type="menu" id="shp_al">Shp Al</button>
+          <button  type="menu" id="sec">Seç</button>
+          <button  type="menu" id="shpgonder">Shp Gönder</button>
   </body>
