--- a/HTML-CSS-JS/cbs_map.html
+++ b/HTML-CSS-JS/cbs_map.html
@@ -18,11 +18,21 @@
             <button class="acilirbuton" type="menu">Nokta</button>
             <button class="acilirbuton"type="menu">Çizgi</button>
             <button class="acilirbuton" type="menu">Çokgen</button></details>
-          <details id="verial"><summary style=" margin: 3%; font-size: small; list-style: none;padding: 5px;font-weight: bold;">Vektör Veri Al</summary>
+          <details id="verial"><summary style=" margin: 3%; font-size: small; list-style: none;padding: 5px;font-weight: bold;">Vektör Veri Yükle</summary>
             <button class="acilirbuton" type="menu">Shp</button>
             <button class="acilirbuton"type="menu">Dwg</button>
             <button class="acilirbuton" type="menu">Ncz</button>
             <button class="acilirbuton" type="menu">Kml</button></details>
+            <details id="verial"><summary style=" margin: 3%; font-size: small; list-style: none;padding: 5px;font-weight: bold;">Vektör Veri İndir</summary>
+              <button class="acilirbuton" type="menu">Shp</button>
+              <button class="acilirbuton"type="menu">Dwg</button>
+              <button class="acilirbuton" type="menu">Ncz</button>
+              <button class="acilirbuton" type="menu">Kml</button></details>
+              <details id="verial"><summary style=" margin: 3%; font-size: small; list-style: none;padding: 5px;font-weight: bold;">Harita Servisleri</summary>
+                <button class="acilirbuton" type="menu">Shp</button>
+                <button class="acilirbuton"type="menu">Dwg</button>
+                <button class="acilirbuton" type="menu">Ncz</button>
+                <button class="acilirbuton" type="menu">Kml</button></details>
         </div>
         <div id="map_vieww"></div>
         <div id="map_view">
@@ -36,6 +46,9 @@
         <div id="sag_sekme">
           <details id="araclar"><summary id="araclar2">Araçlar</summary>
           <div id="sekme_araclar"></div></details>
+          <details id="analizler"><summary id="analizler2">Analizler</summary>
+            <div id="sekme_analizler"></div></details>
+
         </div>
         <div id="haritaa">harita</div>
   </body>
