--- a/HTML-CSS-JS/cbs_map.html
+++ b/HTML-CSS-JS/cbs_map.html
@@ -31,8 +31,10 @@
               <details id="map_services"><summary style="font-size: small; list-style: none;padding: 5px;font-weight: bold;">Harita Servisleri</summary>
                 <button class="button1" onclick="add_osm()"" ondblclick="remove_osm()" type="menu">OpenStreetMap</button>
                 <button class="button2"type="menu"onclick="add_googlestreet()" ondblclick="remove_googlestreet()">GoogleStreetMap</button>
-                <button class="button3" type="menu" >GoogleSatellite</button>
-                <button class="button4" type="menu" onclick="add_mapbox()" ondblclick="remove_mapbox()">MapBox</button></details>
+                <button class="button2"type="menu"onclick="add_googlesatellite()" ondblclick="remove_googlesatellite()">GoogleSatelliteMap</button>
+                <button class="button3" type="menu" onclick="add_cardodb_darkmatter()" ondblclick="remove_cardodb_darkmatter()" >Carto Dark Matter</button>
+                <button class="button4" type="menu" onclick="add_mapbox()" ondblclick="remove_mapbox()">MapBox Satellite</button>
+                <button class="button4" type="menu" onclick="add_stamen_watercolor()" ondblclick="remove_stamen_watercolor()">Stamen Watercolor</button></details>
         </div>
         <div id="map_view_background"></div>
         <div id="map_view">
@@ -74,11 +76,41 @@
     zoomOffset: -1,
     accessToken: 'pk.eyJ1IjoiYmlsYWxiZW56ZXIiLCJhIjoiY2wxM3QwanJwMDk0ZTNwbHFrdXNsc215aiJ9.cpvdEZ1Dv8cmWASBnyvnag'
 });
-
+var CartoDB_DarkMatter = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+subdomains: 'abcd',
+	maxZoom: 19
+});
+var googlesatellite = L.tileLayer('http://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}',{
+   maxZoom: 20,
+   subdomains:['mt0','mt1','mt2','mt3']
+ });
+var Stamen_Watercolor = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/watercolor/{z}/{x}/{y}.{ext}', {
+ attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+subdomains: 'abcd',
+minZoom: 1,
+maxZoom: 16,
+ext: 'jpg'
+});
+function add_stamen_watercolor() {
+  Stamen_Watercolor.addTo(map);
+  osm_map.remove(map);
+  googlestreets.remove(map);
+  mapbox.remove(map) ;
+  googlesatellite.remove(map);
+  CartoDB_DarkMatter.remove(map);
+  document.getElementById('map_screen').style.opacity = 1
+}
+function remove_stamen_watercolor() {
+  Stamen_Watercolor.remove(map);
+  document.getElementById('map_screen').style.opacity = 0.5
+}
 function add_osm() {
   osm_map.addTo(map);
   googlestreets.remove(map);
   mapbox.remove(map) ;
+  googlesatellite.remove(map);
+  CartoDB_DarkMatter.remove(map);Stamen_Watercolor.remove(map);
   document.getElementById('map_screen').style.opacity = 1
 }
 function remove_osm() {
@@ -86,23 +118,50 @@ function remove_osm() {
   document.getElementById('map_screen').style.opacity = 0.5
 }
 function add_googlestreet() {
-  googlestreets.addTo(map)
-  osm_map.remove(map)
-  mapbox.remove(map)
+  googlestreets.addTo(map);
+  osm_map.remove(map);
+  mapbox.remove(map);
+  googlesatellite.remove(map);
+  CartoDB_DarkMatter.remove(map);Stamen_Watercolor.remove(map);
   document.getElementById('map_screen').style.opacity = 1 
  }
 function remove_googlestreet() {
   googlestreets.remove(map)
   document.getElementById('map_screen').style.opacity = 0.5
  }
-function add_mapbox() {
-  mapbox.addTo(map)
+ function add_googlesatellite() {
+  googlesatellite.addTo(map)
   osm_map.remove(map)
-  googlestreets.remove(map)
+  mapbox.remove(map)
+  CartoDB_DarkMatter.remove(map);Stamen_Watercolor.remove(map);
+  document.getElementById('map_screen').style.opacity = 1 
+ }
+function remove_googlesatellite() {
+  googlesatellite.remove(map)
+  document.getElementById('map_screen').style.opacity = 0.5
+ }
+function add_mapbox() {
+  mapbox.addTo(map);
+  osm_map.remove(map);
+  googlestreets.remove(map);
+  googlesatellite.remove(map);
+  CartoDB_DarkMatter.remove(map);Stamen_Watercolor.remove(map);
   document.getElementById('map_screen').style.opacity = 1
 }
 function remove_mapbox(){
   mapbox.remove(map)
+  document.getElementById('map_screen').style.opacity = 0.5
+}
+function add_cardodb_darkmatter(){
+  CartoDB_DarkMatter.addTo(map);
+  osm_map.remove(map);
+  googlestreets.remove(map);
+  mapbox.remove(map);
+  googlesatellite.remove(map);Stamen_Watercolor.remove(map);
+  document.getElementById('map_screen').style.opacity = 1
+}
+function remove_cardodb_darkmatter(){
+  CartoDB_DarkMatter.remove(map);
   document.getElementById('map_screen').style.opacity = 0.5
 }
 </script>
