--- a/HTML-CSS-JS/cbs_map.html
+++ b/HTML-CSS-JS/cbs_map.html
@@ -309,6 +309,10 @@ function dont_show_coordints(){
 2- oluşturlan point haritaya eklenir
 */
 
+var myicon = L.icon({
+  iconUrl: "point_icon.png",
+  iconSize: [31,31]
+});
 
 function create_point(){
   document.getElementById('sayfamesajlari').innerText="Çizime Başlayabilirsiniz.";
@@ -318,7 +322,7 @@ function create_point(){
     x = (e.latlng.lat).toFixed(6);
     y = (e.latlng.lng).toFixed(6);
     document.getElementById('sayfamesajlari').innerText="Nokta oluşturuldu \n"+"X="+x+"   "+"Y="+y;
-    point = L.marker([x,y]);
+    point = L.marker([x,y],{icon: myicon});
     map.addLayer(point);
     })
     document.addEventListener('keydown', (event) => {
@@ -326,15 +330,47 @@ function create_point(){
     var code = event.code;
     if (name === "F2") {
       document.getElementById('sayfamesajlari').innerText = "İşlem Tamamlandı"
+      setTimeout(() => {  document.getElementById('sayfamesajlari').innerText = "\n..."; }, 1500);
+      setTimeout(() => {  document.getElementById('sayfamesajlari').innerText = "\n......"; }, 1500);
+      setTimeout(() => {  document.getElementById('sayfamesajlari').style.backgroundColor  = "unset"}, 1500);
+      setTimeout(() => {  document.getElementById('sayfamesajlari').innerText = "";}, 1500);
       map.off('click')
-    }
-  })}// fonksiyon sonu
+    }})}
+    // fonksiyon sonu
   
-
 
 var x
 var y
 var point
 
+function sleep(ms)  {
+  return new Promise(resolve => setTimeout(resolve, ms));
+}
 
+async function baslangic(){
+await sleep(1000);
+document.getElementById('map_screen').style.backgroundColor = "white";
+await sleep(500);
+document.getElementById('sayfamesajlari').style.backgroundColor  = "black";
+document.getElementById('sayfamesajlari').innerText = "Çizim Ekranı Oluşturuldu.";
+await sleep(2000);
+document.getElementById('sayfamesajlari').innerText = "";
+await sleep(500);
+document.getElementById('sayfamesajlari').style.backgroundColor  = "unset";}
+baslangic()
+
+// Fetch all the details element.
+const details = document.querySelectorAll("details");
+
+// Add the onclick listeners.
+details.forEach((targetDetail) => {
+  targetDetail.addEventListener("click", () => {
+    // Close all the details that are not targetDetail.
+    details.forEach((detail) => {
+      if (detail !== targetDetail) {
+        detail.removeAttribute("open");
+      }
+    });
+  });
+});
 </script>
